# crab-fp

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
examples/: basic_usage.rs  price_calculator.rs  utils.rs
src/: core.rs  fixed_string.rs  impls.rs  lib.rs  util.rs
src/impls/: mod.rs  option.rs  result.rs  vec.rs
